--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Researcher
-url: "https://ankitsultana.com"
-baseurl: "/researcher"
+title: Sleepy Pinks
+url: "https://sleepypinks.github.io"
+baseurl: "/"
 
 markdown: kramdown
 #ins_logo: "./bits-logo.png"
@@ -8,7 +8,7 @@ markdown: kramdown
 tracking_id: #
 
 footer: yes
-footer_url: "https://github.com/ankitsultana"
+footer_url: "https://github.com/sleepypinks"
 footer_text: "Page design by Ankit Sultana"
 
 sass:
@@ -16,9 +16,9 @@ sass:
     sass_dir: _sass
 
 nav:
- - name: "About"
-   link: "/researcher/"
- - name: "Resume"
-   link: "resume.pdf"
- - name: "Contact"
-   link: "contact"
+ #- name: "About"
+ #  link: "/researcher/"
+ #- name: "Resume"
+ #  link: "resume.pdf"
+ - name: "Personas and Storyboarding"
+   link: "personas"
