Add link for personas

--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ nav:
  #- name: "Resume"
  #  link: "resume.pdf"
  - name: "Personas and Storyboarding"
-   link: "personas"
+   link: "/personas/"
