--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ nav:
    link: "personas"
  - name: "Responsive Redesign"
    link: "redesign"
-- name: "Koko - Iterative Design"
+ - name: "Koko"
    link: "koko"
