--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ nav:
  #  link: "/researcher/"
  #- name: "Resume"
  #  link: "resume.pdf"
- - name: "Personas and Storyboarding"
+ - name: "Personas"
    link: "personas"
  - name: "Responsive Redesign"
    link: "redesign"
