--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ sass:
     sass_dir: _sass
 
 nav:
- - name: "About"
+ - name: "Home"
    link: ""
- - name: "Projects"
-   link: "https://sleepypinks.github.io/#Projects"
+# - name: "Projects"
+#  link: "https://sleepypinks.github.io/#Projects"
  - name: "Resume"
    link: "resume.pdf"
  - name: "Google Scholar"
