--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,6 @@ nav:
 #  link: "https://sleepypinks.github.io/#Projects"
  - name: "Resume"
    link: "resume.pdf"
- - name: "Google Scholar"
-   link: "https://scholar.google.com/citations?user=o8oJ6s4AAAAJ&hl=en"
+ - name: "Contact"
+   link: "contact"
  
