--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sass:
 nav:
  - name: "Home"
    link: "/"
- - name: "Research Projects"
+ - name: "Research"
    link: "projects"
  - name: "Resume"
    link: "resume.pdf"
